[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"


[workspace.dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std    = "^1.2"
cw2             = "^1.1"
cw20            = "^1.1"
cw20-base       = {version = "*", path = "./packages/cw20-base"}
cw721           = "0.18.0"
cw721-base      = { version = "*", path = "./packages/cw721-base" }
cw721-base-016  = { version = "0.16.0", package = "cw721-base" }
cw-multi-test   = "^0.20"
cw-ownable      = "^0.5"
cw-storage-plus = "^1.1"
cw-utils        = "^1.0"
schemars        = "^0.8"
serde           = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror       = "^1.0"


[profile.release.package.cw404]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false